pnet_macros/tests/compile-fail/length_expr_parentheses.stderr
error: this file contains an unclosed delimiter
  --> tests/compile-fail/length_expr_parentheses.rs:15:1
   |
15 | #[packet]
   | ^^^^^^^^^ unclosed delimiter
   |
   = note: this error originates in the derive macro `::pnet_macros::Packet` (in Nightly builds, run with -Z macro-backtrace for more info)
